@@ -1,3 +1,8 @@
+2003-03-03  Ross Burton  <ross@burtonini.com>
+
+	* src/dh-main.c: Fix the prototype on dh_client_data_cb, and
+	remove the GTK+ 2.2.0 check as that is assumed.
+
 2003-03-03  Mikael Hallendal  <micke@codefactory.se>
 
 	* devhelp.desktop.in (Exec): changed name to devhelp
